# project_ws

./: .gitignore  datasheet.txt
quin_dashboard/: package-lock.json  package.json
quin_dashboard/app/: page.tsx
quin_hardware/: platformio.ini
quin_hardware/another_program/: encoder.cpp  move_robot.cpp
quin_hardware/config/: base_move.h  config.h  digging.h  drive_output.h  encoder_input.h  spin.h
quin_hardware/src/: driver.cpp  gripper.cpp  plantSystem.cpp  plantSystem_fixed.cpp  spin.cpp  thismove.cpp
quin_hardware/test/: base_move.cpp  drill.cpp  encoder.cpp  fixedPlant.cpp  gripper.cpp  move.cpp  movement.cpp  movement.py  pha.cpp  plantSystem.cpp  plantSystemll.cpp  spin.cpp  spin_test.cpp  system.cpp  test_drive.cpp  thismove.cpp
quin_hardware/test/launch/: camera.launch.py
quin_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
quin_ws/install/quin_core/lib/quin_core/src/: controller.py
quin_ws/install/quin_core/share/ament_index/resource_index/package_run_dependencies/: quin_core
quin_ws/install/quin_core/share/ament_index/resource_index/parent_prefix_path/: quin_core
quin_ws/install/quin_core/share/quin_core/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
quin_ws/install/quin_core/share/quin_core/cmake/: quin_coreConfig.cmake
quin_ws/install/quin_core/share/quin_core/config/: locations.yaml  motor_config.yaml
quin_ws/install/quin_core/share/quin_core/launch/: bot_bringup.launch.py  joystickController.launch.py  microros.launch.py
quin_ws/install/quin_core/share/quin_core/scripts/: cmd_move  cmd_move.py
quin_ws/log/: latest_build
quin_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
quin_ws/src/log/: latest_build
quin_ws/src/quin_core/: CMakeLists.txt
quin_ws/src/quin_core/config/: camera.yaml
quin_ws/src/quin_core/launch/: bot_bringup.launch.py  camera.launch.py  joystickController.launch.py  microros.launch.py
quin_ws/src/quin_core/quin_core/: controller.py
quin_ws/src/quin_core/scripts/: cmd_move.py  flip_camera.py  joystick_control  joystick_control.py
quin_ws/src/quin_core/src/: CMakeLists.txt  setup.py  utilize.py
